...
    <string name="cancel_fixed_expense">Cancel</string>
    <string name="save">Save</string>
    <string name="message_body_fixed_expense">The Specified Expense Was Exceeded And Its Value Was</string>
    <string name="message_body_fixed_expenses">Do You Want To Reset The Fixed Expense Or Canceled It.</string>
    <string name="enter_fixed_expense">Please Enter The Fixed Expense Value</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="add_new_category">Add New Category</string>
    <string name="ok">OK</string>
    <string name="close_categories">Close</string>
    <string name="search_for_category">Search For Category</string>
    <string name="categoires_expense_content_descriptions">categoires_expense_content_descriptions</string>
    <string name="logo_image_content_description">logo_image_content_description</string>
    <string name="choose_your_currency">Choose Your Currency</string>
    <string name="report_currency">Report About All Your Currencies</string>
...
