...
    app:startDestination="@id/userCurrencyFragment">
    <fragment
            android:id="@+id/userCurrencyFragment"
            android:name="com.monitoryourexpenses.expenses.usercurrency.GetUserCurrencyFragment"
            android:label="UserCurrencyFragment" >
        <action
                android:id="@+id/action_registeration_to_myExpense"
                app:destination="@id/myExpenseFragment"
                app:popUpTo="@+id/userCurrencyFragment"
                app:popUpToInclusive="true" />
    </fragment>


...
    </fragment>
    <fragment
            android:id="@+id/createNewExpenseFragment"
            android:name="com.monitoryourexpenses.expenses.createexpense.CreateNewExpenseFragment"
            android:label="CreateNewExpenseFragment" >
        <action
                android:id="@+id/action_createNewExpenseFragment_to_myExpenseFragment"
                app:destination="@id/myExpenseFragment"
                app:popUpTo="@+id/myExpenseFragment"
                app:popUpToInclusive="true" />
    </fragment>

    <fragment
...
