...
            android:layout_marginTop="220dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:gravity="start"
            android:text="@string/choose_your_currency"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toTopOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:marginLeftSystemWindowInsets="@{true}"
            app:marginRightSystemWindowInsets="@{true}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="209dp"
            android:layout_marginEnd="16dp"
...
